--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/samples": "2.1.1",
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-keyboard-spacer": "^0.4.1",
     "react-navigation": "^3.0.9"
   },
   "devDependencies": {
