--- a/app.json
+++ b/app.json
@@ -10,9 +10,9 @@
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/habitsCalendarLogo1.png",
     "splash": {
-      "image": "./assets/images/splash.png",
+      "image": "./assets/images/splashScreen1.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
